Layout changes to Add/Edit Item page to allow inline user feedack for form field errors. Minor changes to custom.css to fix alignment issues.

--- a/css/custom.css
+++ b/css/custom.css
@@ -29,7 +29,7 @@ ul {
 
 .brand {
    color: #FFFFFF;
-   font-family: 'Montserrat', serif;
+   font-family: 'Montserrat', san-serif;
    font-weight: 700;
 }
 
@@ -42,4 +42,8 @@ thead {
    color: #FFFFFF;
    font-weight: normal;
    font-size: 12px;
+}
+
+.href-text-align-with-button-text {
+   line-height: 1.9em;
 }
